--- a/MATLAB2TIKZ_STYLE.TEX
+++ b/MATLAB2TIKZ_STYLE.TEX
@@ -13,3 +13,9 @@ FIRST
 
 xlabel style={font=\Large},
 ylabel style={font=\Large},
+
+
+% TICKS ON AXES
+
+xtick ={85,95,105},
+ytick={3.5,4.5,5.5},
