--- a/TIKZPICTURE_DECORATIONS.TEX
+++ b/TIKZPICTURE_DECORATIONS.TEX
@@ -17,6 +17,8 @@ xlabel style={font=\color{black},font=\large},
 xlabel={Energy(eV)},
 ymin=0,
 ymax=1,
+ymajorticks=false,     % NO Y TICKS 
+ylabel near ticks,      % Y LABEL NEAR AXIS!!
 ylabel style={font=\color{black},font=\large},
 ylabel={count (normalized)},
 axis background/.style={fill=white},
