--- a/TIKZPICTURE_DECORATIONS.TEX
+++ b/TIKZPICTURE_DECORATIONS.TEX
@@ -3,7 +3,8 @@
 \definecolor{mycolor1}{rgb}{0.00000,0.44700,0.74100}  % nice blue!
 %
 \begin{tikzpicture}
-\begin{axis}[%
+\begin{axis}[% 
+axis lines =none,  %%%%%%%%%%%%%%%%%%  DONT SHOW AXIS FRAME, NO AXIS LINES 
 width=4.035in,
 height=2.381in,
 at={(1.568in,0.591in)},
